<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">navbelt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="forward">^</string>
    <string name="stop">stop</string>
    <string name="title_activity_waypoints">Waypoints</string>
    <string name="nextViewString">Next View</string>
    <string name="getCurrentLocation">getCurrentLocation</string>
    <string name="back">\\/</string>
    <string name="silence">silence</string>
    <string name="calibrate">Calibrate compass</string>
    <string name="cal2">Calibrate\nCompass</string>

</resources>